# EHR-Indication-Processing

./: .gitignore  EHR-Indication-Processing.Rproj  README.md  pyproject.toml  requirements.in  requirements.txt
00_Data/: README.md
00_Data/LUTs/: NHS_Main_Speciality_Code.csv  icd10_ccsr_mapping.csv
01_Preprocessing/: Antibiotics_Indciation_Investigation.Rmd  Post_Processing.Rmd  Pre_Processing-Indications.Rmd  Pre_Processing-Indications_FlowChart.Rmd  Preprocess_Data.ipynb  Preprocess_MIMIC-IV-ED_Data.ipynb  Readme.md
01_Preprocessing/MIMIC/: MIMIC-ED_Exploration.Rmd  MIMIC-ED_Free-Text_Extraction.Rmd
02_Models/01_Baseline/Regex/: Readme.md  Regex.ipynb  Regex_rules_sheet_annotated.xlsx
02_Models/01_Baseline/XGBoost/: XGBoost.ipynb
02_Models/02_BERTs/Base_BERT/: Base_BERT.ipynb
02_Models/02_BERTs/Bio_ClinicalBERT/: Bio_ClinicalBERT - Iterations.ipynb  Bio_ClinicalBERT.ipynb
02_Models/03_LLMs/Alpaca/: Alpaca_Finetuned.ipynb
03_Evaluation/: Evaluation_Table.ipynb  Failure_Case_Analysis.ipynb  Inter-annotator-agreement.ipynb  Multi_Label_Model_Evaluation.ipynb  Multi_Source_Plots.rmd  Performance_Plots.Rmd  Performance_Plots.ipynb  Runtime_Benchmarks.ipynb
03_Evaluation/Sandbox/: Multi_Source_Plots.ipynb  Multi_Source_Plots_Playground.rmd
04_Report/: Source_sankey.html  ggsankey.R
04_Report/00_Utils/: helper_functions.R
04_Report/01_Base_Data_Description/: 01_Data_Overview.Rmd  02_Labelled_Data_Overview.Rmd  03_Population_Table.Rmd
05_Deployment/: README.md  inferrence.py  inferrence_spot_check.py  pyproject.toml  requirements_deployment.txt
(+4 files in other folders)
