[project]
name = "ehr-indication-processing"
version = "0.1.0"
description = "Tools and pipeline to process, classify and analyse free-text medication prescription indications"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Standard data manipulation
    "pandas==2.2.2",
    "numpy==1.26.4",
    "xlsxwriter==3.2.0",
    "openpyxl==3.1.2",
    # Misc
    "tqdm==4.66.2",
    "jinja2==3.1.3",
    "python-dotenv==1.0.1",
    # Plotting
    "seaborn==0.13.2",
    "matplotlib==3.8.4",
    "plotnine==0.13.4",
    # Model evaluation
    "scikit-learn==1.4.2",
    # ML Libraries
    "tiktoken==0.6.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "torchaudio==2.2.2",
    "transformers[torch]==4.39.3",
    "datasets==2.18.0",
    "sacremoses==0.1.1",
    "xgboost==2.0.3",
    "regex==2023.12.25",
    "openai==1.17.1",
]

[project.optional-dependencies]
dev = [
    "jupyter==1.0.0",
    "ipykernel==6.29.4",
    "ipywidgets==8.1.2",
    "widgetsnbextension==4.0.10",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]
torchaudio = [{ index = "pytorch-cu121" }]
